Add Prometheus and Grafana observability stack

--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,11 +1,12 @@
 apiVersion: 1
 
 providers:
-  - name: "Local Dashboards"
+  - name: "Near Realtime Lab"
     orgId: 1
-    folder: "Lab"
+    folder: "Near Realtime Lab"
     type: file
-    disableDeletion: true
+    disableDeletion: false
     editable: true
     options:
       path: /var/lib/grafana/dashboards
+      foldersFromFilesStructure: false
