--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minio123}
+      MINIO_PROMETHEUS_AUTH_TYPE: public
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 10s
@@ -166,6 +167,70 @@ services:
     networks: [labnet]
     extra_hosts:
       - "host.docker.internal:host-gateway"
+  # ----------------------------
+  # Observability (Prometheus + Grafana)
+  # ----------------------------
+
+  prometheus:
+    image: prom/prometheus:v2.54.1
+    ports:
+      - "19090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.enable-lifecycle"
+    restart: unless-stopped
+    networks: [labnet]
+
+  grafana:
+    image: grafana/grafana:11.2.0
+    ports:
+      - "13000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_USERS_ALLOW_SIGN_UP: "false"
+      GF_AUTH_ANONYMOUS_ENABLED: "false"
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+    networks: [labnet]
+
+  # Kafka Exporter (برای متریک‌های Kafka topic/consumer group)
+  kafka-exporter:
+    image: danielqsj/kafka-exporter:v1.7.0
+    command:
+      - "--kafka.server=kafka:9092"
+    ports:
+      - "19308:9308"
+    depends_on:
+      kafka:
+        condition: service_healthy
+    restart: unless-stopped
+    networks: [labnet]
+
+  # ClickHouse Exporter (برای متریک‌های ClickHouse)
+  clickhouse-exporter:
+    image: f1yegor/clickhouse-exporter:latest
+    environment:
+      CLICKHOUSE_URL: http://clickhouse:8123
+      CLICKHOUSE_USER: admin
+      CLICKHOUSE_PASSWORD: admin
+    ports:
+      - "19116:9116"
+    depends_on:
+      clickhouse:
+        condition: service_healthy
+    restart: unless-stopped
+    networks: [labnet]
+
 
 networks:
   labnet:
@@ -174,3 +239,5 @@ volumes:
   kafka-data:
   minio-data:
   clickhouse-data:
+  prometheus-data:
+  grafana-data:
